--- a/angularapp/src/app/userviewappointment/userviewappointment.component.css
+++ b/angularapp/src/app/userviewappointment/userviewappointment.component.css
@@ -69,10 +69,10 @@ th {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 10vh; /* Adjust this value as needed */
+    height: 10vh; 
     text-align: center;
-    font-size: 1.5em; /* Adjust the font size as needed */
-    color: #333; /* Adjust the text color as needed */
+    font-size: 1.5em; 
+    color: #333; 
 }
 
 .blue-line {
@@ -86,18 +86,18 @@ th {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    gap: 20px; /* Adds space between QR and details */
+    gap: 20px; 
   }
   
   .qr-box {
-    flex: 1; /* QR Code takes up space */
+    flex: 1;
     display: flex;
     justify-content: center;
     align-items: center;
   }
   
   .qr-box canvas {
-    width: 150px; /* Adjust as needed */
+    width: 150px; 
     height: 150px;
 
   }
