--- a/angularapp/src/app/usernavbar/usernavbar.component.html
+++ b/angularapp/src/app/usernavbar/usernavbar.component.html
@@ -20,6 +20,9 @@
                                 <button onclick="location.href='/userviewfeedback'">My Feedbacks</button>
                             </div>
                         </li>
+                        <li>
+                            <a style="cursor: pointer" routerLink="/map">Find Us</a>
+                        </li>
                         <li class="profile-dropdown">
                             <a href="#"><i class="bi bi-person-circle"></i></a>
                             <div class="dropdown-menu">
