--- a/angularapp/src/app/userviewappointment/userviewappointment.component.html
+++ b/angularapp/src/app/userviewappointment/userviewappointment.component.html
@@ -38,7 +38,7 @@
           <td>
             <div class="d-flex align-items-center gap-3">
               <span>{{ appointment.status }}</span>
-              <div *ngIf="appointment.status === 'Approved'">
+              <div *ngIf="appointment.status === 'Payement Requested'">
                 <button class="btn btn-primary" (click)="payNow(i)">Pay Now</button>
               </div>
             </div>
